<resources>
    <string name="app_name">Doolshe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="btnShopOwnerLoginAs">shop owner</string>
    <string name="btnCustomerLoginAs">customer</string>
    <string name="loginAs">LOGIN AS</string>
    <string name="registerAs">REGISTER AS</string>
    <string name="btnRegisterAsCustomer">customer</string>
    <string name="btnRegisterAsShopOwner">shop owner</string>
    <string name="tieShopName">Shop Name</string>
    <string name="tieAddress">Location</string>
    <string name="tieOwnerName">Owner Name</string>
    <string name="tieMobileNumber">Mobile Number</string>
    <string name="tiePassword">Password</string>
    <string name="your_name">Your Name</string>
    <string name="address">Address</string>
    <string name="Your_Address">Your_Address</string>
    <string name="txtDashboard" />
    <string name="textDashboard">Dashboard</string>
    <string name="btnMyShop">My Shop</string>
    <string name="btnMyOrders">My Orders</string>
    <string name="btnMyAccount">My Account</string>
    <string name="btnSODeleteProfile">Delete Profile</string>
    <string name="btnSOUpdateProfile">Update Profile</string>
    <string name="textMyAccSO">My Account</string>
    <string name="shopNameUpdate">Shop Name</string>
    <string name="btnAddReview">add review</string>
    <string name="btnReviews">reviews</string>
    <string name="etCustomerName">Enter your name</string>
    <string name="etCustomerRating">Rate from 1 to 5</string>
    <string name="mactCustomerComment">Enter your comment here</string>
    <string name="btnSubmitReview">submit</string>
    <string name="btnUpdateReview">update</string>
    <string name="btnViewReview">view</string>
    <string name="btnDeleteReview">delete</string>
    <string name="etCusPhone">Enter phone number</string>
    <string name="delete_product">Delete Product</string>
    <string name="update_product">Update Product</string>
    <string name="read_product">Read Product</string>
    <string name="add_product">Add Product</string>
    <string name="details">Details</string>
    <string name="cake_price">Cake Price</string>
    <string name="cake_name">Cake Name</string>
    <string name="item_no">Item No.</string>


    <string-array name="State">
        <item>Maharashtra</item>
        <item>Gujarat</item>
    </string-array>

    <string-array name="shipper">
        <item>Shipper 1</item>
        <item>Shipper 2</item>
    </string-array>

    <string-array name="DishName">
        <item>Thepla</item>
        <item>Dal Rice</item>
        <item>Dhokla</item>
        <item>Sabji Roti</item>
        <item>Kadhi Khichdi</item>
        <item>Puri bhaji</item>
        <item>Dal Dhokdi</item>
        <item>Undhiyu</item>
        <item>Aloo Paratha</item>
        <item>Patra</item>
        <item>Khandvi</item>
        <item>Gulab Jamun</item>
        <item>SevTomato bhakri</item>
        <item>Shrikhand</item>
        <item>Palak Paneer</item>
        <item>Khulcha</item>
        <item>Makki di roti</item>
        <item>Gobi Partha</item>
        <item>Biryani</item>
        <item>Rajma</item>
        <item>Bhindi Fry</item>
        <item>Dum Biryani</item>
        <item>Rumali roti</item>
        <item>Dal Makhni</item>
        <item>Samosa</item>
        <item>Kachori</item>
        <item>Menduwada</item>
        <item>Pulav</item>
        <item>Pav Bhaji</item>
        <item>Misal Pav</item>
        <item>Mix Vegetable</item>
        <item>Muffins</item>
        <item>DalFry JerraRice</item>
        <item>Bengali sweet</item>
        <item>Puranpoli</item>
        <item>Egg Curry</item>
        <item>Pomfret Fish</item>
        <item>Egg Bhurji</item>
        <item>Dum chicken</item>
        <item>Hyderabadi Chicken Biryni</item>
    </string-array>
</resources>