<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registerback"
    tools:context=".ShopOwnerRegistration">


    <ScrollView
        android:layout_width="350dp"
        android:layout_height="625dp"
        android:background="@drawable/formscrollbackground"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436"
        app:layout_goneMarginLeft="50dp"
        app:layout_goneMarginRight="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="300px"
                android:layout_marginLeft="300px"
                android:layout_marginTop="50px"
                android:layout_marginEnd="300px"
                android:layout_marginRight="300px"
                android:layout_marginBottom="50px"
                app:srcCompat="@drawable/flag_sri_lanka" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilShopName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_cusname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/scrollview_shape"
                    android:hint="@string/tieShopName"
                    android:inputType="text"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_cusmobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/scrollview_shape"
                    android:hint="@string/tieAddress"
                    android:inputType="textPostalAddress"
                    android:textColor="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_cuslocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/scrollview_shape"
                    android:hint="@string/tieOwnerName"
                    android:inputType="text"
                    android:textColor="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_cusMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/scrollview_shape"
                    android:hint="@string/tieMobileNumber"
                    android:inputType="phone"
                    android:textColor="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiecusPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/scrollview_shape"
                    android:hint="@string/tiePassword"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnSignupAsOwner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_shape"
                    android:text="register"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignupAsOwner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="45dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="register"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>